Calendario adicionado na tela de agendamento
